fixed not showing icons

--- a/frontend/src/app/landing/landing.component.footer.sass
+++ b/frontend/src/app/landing/landing.component.footer.sass
@@ -1,4 +1,3 @@
-
 .footer-distributed
   background-color: rgb(0,0,0)
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12)
@@ -25,6 +24,7 @@
       text-decoration: none
       color: inherit
   .footer-right
+    font-family: fontawesome
     float: right
     margin-top: 6px
     max-width: 180px
