--- a/frontend/src/app/landing/landing.component.sass
+++ b/frontend/src/app/landing/landing.component.sass
@@ -1,5 +1,5 @@
 *
-  font-family: helvetica, sans-serif
+  //font-family: helvetica, sans-serif
 
 
 .container
@@ -21,7 +21,8 @@
     margin: 0px
     text-transform: uppercase
     font-size: 1.2em
-
+    a
+      color: white
 #nav
   position: absolute
   right: 0
@@ -65,7 +66,6 @@
     max-width: 600px
     height: 30vh
     margin-top: 30vh
-    border: 1px solid red
   .infoContent.left
     float: right
     text-align: left
